<resources>
    <string name="app_name">Make Time</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="event_completed">Great Job!</string>


    <string name="event_name">Event Name</string>
    <string name="event_time">Time</string>
    <string name="event_duration">Duration</string>
    <string name="event_date">Date</string>
    <string name="completed">Completed</string>

    <string name="language_selection">Select Language</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_french">French</string>
    <string name="language_save">Save</string>

    <string name="event_delete">Delete Event?</string>
    <string name="event_confirmation">Are you sure you want to delete this event?</string>

    <string name="event_name_validation" translatable="false">Please provide an event name</string>
    <string name="event_date_validation" translatable="false">Please select a date</string>
    <string name="event_duration_validation" translatable="false">Please enter event duration</string>
    <string name="event_time_of_day_validation" translatable="false">Please select a time of day</string>


    <string-array name="time_of_day">
        <item>Time of Day</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name ="web_client_id">190056213431-o8hgvgb122d7jkir8p3nqp2foab9dars.apps.googleusercontent.com</string>
<!--    //<string name="web_client_id">"756979620471-kgfgjra2ip8l88v4vqsr2vgs8hritv9g.apps.googleusercontent.com"</string>-->
</resources>
